--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: default
 <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/_sass/main.css">
 </head>
 <body>
     <div class="container">
@@ -51,6 +51,6 @@ layout: default
         <p><strong>User Status:</strong> {{ site.data.user_info.user_status }}</p>
     </footer>
 
-    <script src="{{ site.baseurl }}/assets/js/main.js"></script>
+    <script src="{{ site.baseurl }}/_includes/main.js"></script>
 </body>
 </html>
